Trendz 1.15.0 docs (2)